<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="500dp"
        android:layout_height="800dp"
        android:src="@drawable/registrasi"
        tools:viewBindingIgnore="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/judulAja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:text="Create Account"
        android:textStyle="bold"
        tools:viewBindingIgnore="true"
        android:textColor="#7FFF00"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/setUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        tools:viewBindingIgnore="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/judulAja"
        app:layout_constraintVertical_bias="0.0"
        app:startIconDrawable="@drawable/ic_user_24"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ketikUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:viewBindingIgnore="true"
            android:hint="Username" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/setPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        tools:viewBindingIgnore="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/setUsername"
        app:layout_constraintVertical_bias="0.0"
        app:startIconDrawable="@drawable/ic_lock_24"
        
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ketikPassword"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:viewBindingIgnore="true"
            android:hint="Password" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/setEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        tools:viewBindingIgnore="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/setPassword"
        app:layout_constraintVertical_bias="0.0"
        app:startIconDrawable="@drawable/ic_email_24"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ketikEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/setTanggalLahir"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        tools:viewBindingIgnore="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/setEmail"
        app:layout_constraintVertical_bias="0.0"
        app:startIconDrawable="@drawable/ic_date_24"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:inputType="date"
            android:id="@+id/ketikTanggalLahir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:viewBindingIgnore="true"
            android:hint="Tanggal Lahir" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/setNomorHp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/setTanggalLahir"
        app:layout_constraintVertical_bias="0.0"
        app:startIconDrawable="@drawable/ic_phone_24"
        tools:viewBindingIgnore="true"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:inputType="number"
            android:id="@+id/ketikNomorHp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:viewBindingIgnore="true"
            android:hint="Nomor Hp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="Register"
        app:backgroundTint="#70ED28"
        tools:viewBindingIgnore="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/setNomorHp"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="1.0"
        />

</androidx.constraintlayout.widget.ConstraintLayout>